force-app/main/default/objects/Project__c/fields/All_Projects__c.field-meta.xml
<CustomField>
    <fullName>All_Projects__c</fullName>
    <label>All Projects</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Names_Value_Set</valueSetName>
    </valueSet>
</CustomField>