force-app/main/default/objects/Project__c/fields/Project_Duration__c.field-meta.xml
<CustomField>
    <fullName>Project_Duration__c</fullName>
    <description>Calculating project duration</description>
    <formula>IF(
  AND(
    NOT(ISBLANK(Start_Date__c)),
    NOT(ISBLANK(End_Date__c))
  ),
  End_Date__c - Start_Date__c,
  NULL
)</formula>
    <inlineHelpText>Project Duration in Days (End Date - Start Date)</inlineHelpText>
    <label>Project Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>