force-app/main/default/objects/Project__c/fields/Project_End_Year__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Year__c</fullName>
    <description>Using for year filter in the dashboard</description>
    <formula>TEXT(YEAR(End_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project End Year</label>
    <type>Text</type>
</CustomField>