force-app/main/default/objects/Project__c/fields/Project_Health__c.field-meta.xml
<CustomField>
    <fullName>Project_Health__c</fullName>
    <formula>IF(
  AND(ISBLANK(Actual_Completion_Date__c), TODAY() &gt; End_Date__c),
  &quot;Overdue&quot;,
IF(
  AND(
    ISBLANK(Actual_Completion_Date__c),
    Project_Completion_Status__c &lt; 0.75,
    (End_Date__c - TODAY()) &lt; 30
  ),
  &quot;At Risk&quot;,
IF(
  AND(
    ISBLANK(Actual_Completion_Date__c),
    Project_Completion_Status__c &gt;= 0.75,
    (End_Date__c - TODAY()) &lt; 30
  ),
  &quot;Nearly Complete&quot;,
IF(
  AND(ISBLANK(Actual_Completion_Date__c), (End_Date__c - TODAY()) &gt;= 30),
  &quot;On Track&quot;,
IF(
  AND(NOT(ISBLANK(Actual_Completion_Date__c)), Actual_Completion_Date__c &gt; End_Date__c),
  &quot;Completed, but Delayed&quot;,
IF(
  AND(NOT(ISBLANK(Actual_Completion_Date__c)), Actual_Completion_Date__c &lt;= End_Date__c),
  &quot;Completed On Time&quot;,
&quot;&quot;
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Health</label>
    <type>Text</type>
</CustomField>