force-app/main/default/objects/Project__c/fields/Project_Month_End__c.field-meta.xml
<CustomField>
    <fullName>Project_Month_End__c</fullName>
    <description>Using for Month filter in the dashboard</description>
    <formula>CASE(
MONTH(Estimated_End_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;Unknown&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Month End</label>
    <type>Text</type>
</CustomField>