force-app/main/default/objects/Project__c/fields/Project_Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Project_Overdue_Days__c</fullName>
    <formula>IF(
ISBLANK( Actual_Completion_Date__c ),
IF(TODAY() &gt;  End_Date__c  , TODAY() - End_Date__c , 0),
/* If completed, show how many days it finished after planned end */
MAX(Actual_Completion_Date__c - End_Date__c , 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>