force-app/main/default/objects/Project__c/fields/Project_Timeline_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Timeline_Status__c</fullName>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    IF(
         Actual_Completion_Date__c &gt;  End_Date__c,
        &quot;Completed, but delayed by &quot; &amp; TEXT( Actual_Completion_Date__c - End_Date__c) &amp; &quot; days&quot;,
        &quot;Completed on time&quot;
    ),
    IF(
        End_Date__c &gt;= TODAY(),
        TEXT( End_Date__c - TODAY()) &amp; &quot; days left&quot;,
        TEXT(TODAY() -  End_Date__c) &amp; &quot; days overdue&quot;
    )
)</formula>
    <label>Project Timeline Status</label>
    <type>Text</type>
</CustomField>