force-app/main/default/objects/Project__c/fields/Remaining_Budget_Pending__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget_Pending__c</fullName>
    <label>Remaining Budget Pending</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>