force-app/main/default/objects/Project__c/fields/Supervisor_Contact_Text_c__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Contact_Text_c__c</fullName>
    <formula>Supervisor_User__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor_Contact_Text</label>
    <type>Text</type>
</CustomField>