force-app/main/default/objects/Project__c/fields/Supervisor_Email_Text_c__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Email_Text_c__c</fullName>
    <formula>Supervisor_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supervisor_Email_Text</label>
    <type>Text</type>
</CustomField>