force-app/main/default/objects/Project__c/fields/Total_Profit__c.field-meta.xml
<CustomField>
    <fullName>Total_Profit__c</fullName>
    <description>Calculating total profit for the project</description>
    <formula>IF(
    ISPICKVAL(Status__c, &quot;Completed&quot;),
    Company_Profit_of_the_Project__c + Remaining_Budget_Pending__c,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Profit = Company Share of the Project, when status is completed</inlineHelpText>
    <label>Total Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>