force-app/main/default/objects/Project__c/fields/Type_Of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_Project__c</fullName>
    <label>Type Of Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Only Project Plan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>