force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IDC_Company__c</columns>
    <columns>Client__c</columns>
    <columns>Supervisor_User__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Project_Completion_Status__c</columns>
    <columns>Project_Timeline_Status__c</columns>
    <columns>Client_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>