force-app/main/default/objects/Project__c/listViews/All_Projects.listView-meta.xml
<ListView>
    <fullName>All_Projects</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Client_Phone__c</columns>
    <columns>IDC_Company__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Supervisor_User__c</columns>
    <columns>Type_Of_Project__c</columns>
    <columns>Project_Scope__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
</ListView>